--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -1,47 +1,44 @@
-# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置
+# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置（二次优化版）
 [custom]
 
 # 基础设置
 exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\dA-Za-z]+|[:：]\s*)\d[\d.]*\s*GB(?![\dA-Za-z])|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰 (ID|HSD|SNI):|📝 Gói:)
 
-# 排除中国国旗匹配，仅匹配其他国家地区的 Emoji
+# Emoji
+add_emoji=true
+remove_old_emoji=true
 emoji=(?!🇨🇳)[🇦-🇿]{2},
-
-# 明确国家/地区匹配规则，避免重复匹配
+emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
 emoji=^(?!.*[🇦-🇿]{2}).*(香港|HK|Hong Kong),🇭🇰
-emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
 emoji=^(?!.*[🇦-🇿]{2}).*(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
 emoji=^(?!.*[🇦-🇿]{2}).*(新加坡|狮城|SG|Singapore),🇸🇬
-emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
-emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
+emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
 emoji=^(?!.*[🇦-🇿]{2}).*(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
 emoji=^(?!.*[🇦-🇿]{2}).*(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
 emoji=^(?!.*[🇦-🇿]{2}).*(德国|法兰克福|柏林|DE|Germany|Frankfurt|Berlin),🇩🇪
 emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|FR|France|Paris),🇫🇷
+emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
 emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne),🇦🇺
 emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg),🇷🇺
-
-# 非节点用途关键词屏蔽，避免误判为节点添加无关 emoji
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
-# 修正后的代理分组配置
-custom_proxy_group=🚀 全局代理`select`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
+# 代理分组 - 优化分组顺序和选择
+custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,20
+custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`20,,180
 
-# 地区分组修复 - 确保图标与文字匹配
-custom_proxy_group=🇭🇰 香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 中国`url-test`(🇭🇰|🇹🇼|🇨🇳|🇲🇴)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎏 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇲🇴|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`300,,80
+# 地区分组 - 优化正则表达式
+custom_proxy_group=🇭🇰 香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇯🇵 日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇺🇸 美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,300
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇲🇴|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`30,,100
 
-# 优化后的应用分组修复
+# 应用分组 - 优化应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
 custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
@@ -50,7 +47,7 @@ custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
 
-# 继续使用修复后的分流规则
+# 分流规则 - 优化顺序，先直连后代理，并添加Loyalsoldier规则集
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
@@ -67,12 +64,14 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
-ruleset=🚀 全局代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+# 添加Loyalsoldier规则集
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# TUN配置 - 更高性能优化
+# TUN配置 - 更高性能优化，添加exclude-interface
 tun:
   enable: true
   stack: mixed
@@ -86,8 +85,9 @@ tun:
   endpoint-independent-nat: true
   include-uid: [0]
   include-uid-range: [0-999999]
+  exclude-interface: ["tailscale0", "utun"]  # 避免与VPN接口冲突
 
-# DNS配置 - 防止DNS泄露
+# DNS配置 - 防止DNS泄露，添加Volcano DNS作为fallback
 dns:
   enable: true
   ipv6: false
@@ -125,6 +125,292 @@ dns:
     - 114.114.114.114
 
   fallback:
+    - https://1.12.12.12/dns-query  # Volcano DNS
+    - tls://8.8.8.8:853
+    - tls://1.1.1.1:853
+    - https://dns.google/dns-query
+    - https://cloudflare-dns.com/dns-query
+
+  fallback-filter:
+    geoip: true
+    geoip-code: CN
+    ipcidr:
+      - 240.0.0.0/4
+      - 127.0.0.0/8
+      - 0.0.0.0/32
+      - 100.64.0.0/10
+      - 169.254.0.0/16
+      - 192.0.0.0/24
+      - 192.0.2.0/24
+      - 198.51.100.0/24
+      - 203.0.113.0/24
+      - 224.0.0.0/4
+    domain:
+      - '+.google.com'
+      - '+.youtube.com'
+      - '+.github.com'
+      - '+.facebook.com'
+      - '+.x.com'
+      - '+.instagram.com'
+      - '+.netflix.com'
+      - '+.discord.com'
+      - '+.reddit.com'
+      - '+.tiktok.com'
+
+  default-nameserver:
+    - 223.6.6.6
+    - 119.29.29.29
+    - 114.114.114.114
+
+  nameserver-policy:
+    'www.bilibili.com': [223.6.6.6]
+    'api.bilibili.com': [223.6.6.6]
+    '*.taobao.com': [223.6.6.6]
+    '*.tmall.com': [223.6.6.6]
+    '*.alipay.com': [223.6.6.6]
+    '*.alicdn.com': [223.6.6.6]
+    '*.aliyun.com': [223.6.6.6]
+    '*.jd.com': [223.6.6.6]
+    '*.qq.com': [119.29.29.29]
+    '*.tencent.com': [119.29.29.29]
+    '*.weixin.com': [119.29.29.29]
+    '*.wechat.com': [119.29.29.29]
+    '*.weiyun.com': [119.29.29.29]
+    '+.cn': [223.6.6.6]
+
+  caching: true
+  cache-size: 15360
+
+# 基础设置 - 移动网络优化
+log-level: silent
+mode: rule
+allow-lan: false
+unified-delay: true
+tcp-concurrent: true
+connection-multiplexing: true
+tcp-no-delay: true
+tcp-fast-open: true
+tcp-early-data: true
+buffer-pkts: true
+mixed-port: 7890
+sniff-pure-tls: true
+tunnel-max-concurrent: 16
+udp-relay-mode: native
+proxy-reject-drop: true
+disable-color: true
+disable-discovery: true
+geo-auto-update: true
+geo-auto-update-interval: 24
+tracing: false
+profile-memory: false
+external-controller: ""
+secret: ""
+experimental:
+  ignore-resolve-fail: true
+
+# 性能优化参数 - 额外性能提升
+dial-context-timeout: 5
+find-process: false
+find-process-mode: off
+memory-percentage: 15
+proxy-check-ip-version: false
+disable-fake-ip-v6: true
+inbound-tfo: true
+skip-cert-verify: true
+proxy-groups-config:
+  enabled: false
+  interval: 600
+dns-simultaneous: true
+quic:
+  enabled: true
+  low-latency: true
+  max-udp-relay-packet-size: 8192
+transport-timeout: 10
+tcp-keep-alive-period: 30
+tcp-concurrent-reuse: true
+interface-name: ""
+proxy-check-timeout: 5
+store-selected: true
+store-fake-ip: true
+ebpf:
+  redirect-to-tun:
+    - eth0
+    - en0
+  auto-redir: true
+
+# 协议设置 - 更高效传输参数
+max-udp-packet-size: 10240
+http:
+  max-connections-per-host: 32
+  connection-pool-size: 512
+  idle-timeout: 60
+http2:
+  max-concurrent-streams: 1024
+tls:
+  fast-open: true
+  reuse-session: true
+  session-ticket: true
+  session-cache-size: 1024
+  h2-idempotent-methods: [HEAD, GET, OPTIONS]
+
+# 地理数据文件
+geox-url:
+  geoip: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geoip.dat
+  geosite: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/geosite.dat
+  mmdb: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/country.mmdb
+  asn: https://github.com/MetaCubeX/meta-rules-dat/releases/download/latest/GeoLite2-ASN.mmdb
+
+geodata-mode: true
+geodata-loader: memconservative
+geoip-maxmind-compatibility: true
+
+# 网络嗅探 - 性能优化版
+sniffer:
+  enable: true
+  force-dns-mapping: true
+  override-destination: true
+  parse-pure-ip: true
+  sniffing: [tls, http]
+  port-whitelist: [80, 443, 8000-9000]
+  skip-domain:
+    - 'Mijia Cloud'
+    - '*.iCloud.*'
+    - '*.10010.com'
+    - '*.189.cn'
+    - '*.cmpassport.com'
+    - '*.opencloud.wostore.cn'
+    - '+.cn'
+  sniff-timeout: 1.0
+  always-resolve-first: false
+  forest-fire: true
+# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置（二次优化版）
+[custom]
+
+# 基础设置
+exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\dA-Za-z]+|[:：]\s*)\d[\d.]*\s*GB(?![\dA-Za-z])|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰 (ID|HSD|SNI):|📝 Gói:)
+
+# Emoji
+add_emoji=true
+remove_old_emoji=true
+emoji=(?!🇨🇳)[🇦-🇿]{2},
+emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
+emoji=^(?!.*[🇦-🇿]{2}).*(香港|HK|Hong Kong),🇭🇰
+emoji=^(?!.*[🇦-🇿]{2}).*(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
+emoji=^(?!.*[🇦-🇿]{2}).*(新加坡|狮城|SG|Singapore),🇸🇬
+emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
+emoji=^(?!.*[🇦-🇿]{2}).*(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
+emoji=^(?!.*[🇦-🇿]{2}).*(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
+emoji=^(?!.*[🇦-🇿]{2}).*(德国|法兰克福|柏林|DE|Germany|Frankfurt|Berlin),🇩🇪
+emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|FR|France|Paris),🇫🇷
+emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
+emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne),🇦🇺
+emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg),🇷🇺
+emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
+
+enable_rule_generator=true
+overwrite_original_rules=true
+
+# 代理分组 - 优化分组顺序和选择
+custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
+custom_proxy_group=🔍 手动选择`select`.*
+custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`20,,180
+
+# 地区分组 - 优化正则表达式
+custom_proxy_group=🇭🇰 香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇯🇵 日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,100
+custom_proxy_group=🇺🇸 美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`15,,300
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇲🇴|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`30,,100
+
+# 应用分组 - 优化应用分组
+custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
+custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
+custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
+custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
+custom_proxy_group=📱 短视频`select`[]DIRECT
+custom_proxy_group=📢 广告拦截`select`[]REJECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
+
+# 分流规则 - 优化顺序，先直连后代理，并添加Loyalsoldier规则集
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
+ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
+ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
+ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
+# 添加Loyalsoldier规则集
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
+ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
+ruleset=🐟 漏网之鱼,[]FINAL
+
+# TUN配置 - 更高性能优化，添加exclude-interface
+tun:
+  enable: true
+  stack: mixed
+  dns-hijack:
+    - any:53
+    - tcp://any:53
+  auto-route: true
+  auto-detect-interface: true
+  mtu: 9000
+  strict-route: true
+  endpoint-independent-nat: true
+  include-uid: [0]
+  include-uid-range: [0-999999]
+  exclude-interface: ["tailscale0", "utun"]  # 避免与VPN接口冲突
+
+# DNS配置 - 防止DNS泄露，添加Volcano DNS作为fallback
+dns:
+  enable: true
+  ipv6: false
+  listen: 0.0.0.0:53
+  enhanced-mode: fake-ip
+  fake-ip-range: 198.18.0.1/16
+  fake-ip-filter:
+    - '*.lan'
+    - 'localhost.ptlogin2.qq.com'
+    - '+.stun.*.*'
+    - '+.stdpt.*.*'
+    - '+.stun.*.*.*'
+    - '+.stdpt.*.*.*'
+    - '+.msftncsi.com'
+    - '+.srv.nintendo.net'
+    - '+.ntp.org.cn'
+    - '+.pool.ntp.org'
+    - '+.stun.*.*.microsoft.com'
+    - '+.turns.*.*.microsoft.com'
+    - '+.cmpassport.com'
+    - '+.*.cmpassport.com'
+    - '+.10010.com'
+    - '+.*.10010.com'
+    - '+.189.cn'
+    - '+.*.189.cn'
+    - '+.id6.me'
+    - 'dns.msftncsi.com'
+    - 'networktest.windowsupdate.com'
+    - 'www.msftncsi.com'
+    - 'www.msftconnecttest.com'
+
+  nameserver:
+    - 223.6.6.6
+    - 119.29.29.29
+    - 114.114.114.114
+
+  fallback:
+    - https://1.12.12.12/dns-query  # Volcano DNS
     - tls://8.8.8.8:853
     - tls://1.1.1.1:853
     - https://dns.google/dns-query
