--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -31,17 +31,17 @@ custom_proxy_group=🔍 手动选择`select`.*
 custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`30,,180
 
 # 地区分组 - 优化正则表达式
-custom_proxy_group=🇭🇰 香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇯🇵 日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇺🇸 美国`url-test`(🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸|🇺🇲)(?!.*[🇦-🇿]{2}))`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇭🇰 香港`url-test`🇭🇰`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`50,,300
 
 # 应用分组 - 优化应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
-custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
+custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭㈰ 香港`[]🇸🇬 新加坡
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
@@ -71,7 +71,7 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/cla
 ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# TUN配置 - 更高性能优化，添加exclude-interface
+# TUN 配置优化
 tun:
   enable: true
   stack: mixed
@@ -83,9 +83,8 @@ tun:
   mtu: 9000
   strict-route: true
   endpoint-independent-nat: true
-  include-uid: [0]
   include-uid-range: [0-999999]
-  exclude-interface: ["tailscale0", "utun"]  # 避免与VPN接口冲突
+  exclude-interface: ["tailscale0", "utun"]
 
 # DNS配置 - 防止DNS泄露，添加Volcano DNS作为fallback
 dns:
@@ -97,16 +96,14 @@ dns:
   fake-ip-filter:
     - '*.lan'
     - 'localhost.ptlogin2.qq.com'
-    - '+.stun.*.*'
-    - '+.stdpt.*.*'
-    - '+.stun.*.*.*'
-    - '+.stdpt.*.*.*'
+    - '+.stun.*'
+    - '+.stdpt.*'
     - '+.msftncsi.com'
     - '+.srv.nintendo.net'
     - '+.ntp.org.cn'
     - '+.pool.ntp.org'
-    - '+.stun.*.*.microsoft.com'
-    - '+.turns.*.*.microsoft.com'
+    - '+.stun.*.microsoft.com'
+    - '+.turns.*.microsoft.com'
     - '+.cmpassport.com'
     - '+.*.cmpassport.com'
     - '+.10010.com'
@@ -264,14 +261,14 @@ geodata-mode: true
 geodata-loader: memconservative
 geoip-maxmind-compatibility: true
 
-# 网络嗅探 - 性能优化版
+# Sniffer 配置优化
 sniffer:
   enable: true
   force-dns-mapping: true
   override-destination: true
   parse-pure-ip: true
   sniffing: [tls, http]
-  port-whitelist: [80, 443, 8000-9000]
+  port-whitelist: [80, 443]
   skip-domain:
     - 'Mijia Cloud'
     - '*.iCloud.*'
