--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -26,22 +26,21 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # 代理分组 - 优化分组顺序和选择
-custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
+custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
 custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`30,,180
 
 # 地区分组 - 优化正则表达式
 custom_proxy_group=🇭🇰 香港`url-test`🇭🇰`https://www.gstatic.com/generate_204`50,,300
 custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/generate_204`50,,300
 custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`50,,300
 custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`50,,300
 
 # 应用分组 - 优化应用分组
-custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
-custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
-custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭㈰ 香港`[]🇸🇬 新加坡
+custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港
+custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇯🇵 日本
+custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭㈰ 香港
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
