--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -26,7 +26,7 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # 代理分组 - 优化分组顺序和选择
-custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
+custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🇸🇬 新加坡`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
 custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`30,,180
 
@@ -35,11 +35,12 @@ custom_proxy_group=🇭🇰 香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]
 custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
 custom_proxy_group=🇯🇵 日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
 custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇯🇵|🇺🇸|🇸🇬)).*`https://www.gstatic.com/generate_204`50,,300
 
 # 应用分组 - 优化应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港
-custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇯🇵 日本
+custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇸🇬 新加坡
 custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
@@ -63,7 +64,6 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
-# 添加Loyalsoldier规则集
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
