--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -2,46 +2,44 @@
 [custom]
 
 # 基础设置
-exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\dA-Za-z]+|[:：]\s*)\d[\d.]*\s*GB(?![\dA-Za-z])|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰 (ID|HSD|SNI):|📝 Gói:)
+exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|^\d[\d.]*\s*[MG]B(?![A-Za-z])|[:：]\s*\d[\d.]*\s*GB(?![A-Za-z])|剩[余餘]流量|流量[：:]|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰\s*(ID|HSD|SNI):|📝\s*Gói:)
 
 # Emoji
 add_emoji=true
 remove_old_emoji=true
 emoji=(?!🇨🇳)[🇦-🇿]{2},
-emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
-emoji=^(?!.*[🇦-🇿]{2}).*(香港|HK|Hong Kong),🇭🇰
-emoji=^(?!.*[🇦-🇿]{2}).*(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
-emoji=^(?!.*[🇦-🇿]{2}).*(新加坡|狮城|SG|Singapore),🇸🇬
-emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
-emoji=^(?!.*[🇦-🇿]{2}).*(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
-emoji=^(?!.*[🇦-🇿]{2}).*(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
-emoji=^(?!.*[🇦-🇿]{2}).*(德国|法兰克福|柏林|DE|Germany|Frankfurt|Berlin),🇩🇪
-emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|FR|France|Paris),🇫🇷
-emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
-emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne),🇦🇺
-emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg),🇷🇺
-emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
+emoji=^(?!.*[🇦-🇿]{2}).*?(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States),🇺🇸
+emoji=^(?!.*[🇦-🇿]{2}).*?(香港|HK|Hong Kong),🇭🇰
+emoji=^(?!.*[🇦-🇿]{2}).*?(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
+emoji=^(?!.*[🇦-🇿]{2}).*?(新加坡|狮城|SG|Singapore),🇸🇬
+emoji=^(?!.*[🇦-🇿]{2}).*?(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
+emoji=^(?!.*[🇦-🇿]{2}).*?(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
+emoji=^(?!.*[🇦-🇿]{2}).*?(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
+emoji=^(?!.*[🇦-🇿]{2}).*?(德国|法兰克福|柏林|DE|Germany|Frankfurt|Berlin),🇩🇪
+emoji=^(?!.*[🇦-🇿]{2}).*?(法国|巴黎|FR|France|Paris),🇫🇷
+emoji=^(?!.*[🇦-🇿]{2}).*?(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
+emoji=^(?!.*[🇦-🇿]{2}).*?(澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne),🇦🇺
+emoji=^(?!.*[🇦-🇿]{2}).*?(俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg),🇷🇺
+emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*?(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
 # 代理分组 - 优化分组顺序和选择
-custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🇸🇬 新加坡`[]🌍 其他`[]🔍 手动选择`[]DIRECT
+custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
 custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`30,,180
-
-# 地区分组 - 优化正则表达式
-custom_proxy_group=🇭🇰 香港`url-test`🇭🇰(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇯🇵 日本`url-test`🇯🇵(?!.*[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇭🇰 香港`url-test`🇭🇰`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`50,,300
 custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬(?!.*(?!🇨🇳)[🇦-🇿]{2})`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇯🇵|🇺🇸|🇸🇬)).*`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`50,,300
 
 # 应用分组 - 优化应用分组
-custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港
-custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇸🇬 新加坡
-custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港
+custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
+custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
+custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
@@ -64,6 +62,7 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
+# 添加Loyalsoldier规则集
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
