--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -1,4 +1,4 @@
-# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置（二次优化版）
+# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置
 [custom]
 
 # 基础设置
@@ -25,27 +25,26 @@ emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*?(官.?网|官方|产品|平台|勿连|修
 enable_rule_generator=true
 overwrite_original_rules=true
 
-# 代理分组 - 优化分组顺序和选择
+# 代理分组
 custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`30,,180
-custom_proxy_group=🇭🇰 香港`url-test`🇭🇰`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`50,,300
-custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`50,,300
+custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
+custom_proxy_group=🇭🇰 香港`url-test`🇭🇰`https://www.gstatic.com/generate_204`600,,60
+custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼`https://www.gstatic.com/generate_204`600,,60
+custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/generate_204`600,,60
+custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`600,,60
+custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`600,,60
+custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`600,,60
 
-# 应用分组 - 优化应用分组
-custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
-custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
+# 应用分组
+custom_proxy_group=🌍 海外服务`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
 custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
 
-# 分流规则 - 优化顺序，先直连后代理，并添加Loyalsoldier规则集
+# 分流规则
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
@@ -53,16 +52,15 @@ ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
 ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
 ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
-ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=🌐 国际网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
-ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🌍 海外服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
+ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🌍 海外服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
-# 添加Loyalsoldier规则集
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
@@ -72,19 +70,18 @@ ruleset=🐟 漏网之鱼,[]FINAL
 # TUN 配置优化
 tun:
   enable: true
-  stack: mixed
+  stack: gvisor
   dns-hijack:
-    - any:53
-    - tcp://any:53
+    - udp://0.0.0.0:53
+    - tcp://0.0.0.0:53
   auto-route: true
   auto-detect-interface: true
-  mtu: 9000
+  mtu: 1400
   strict-route: true
   endpoint-independent-nat: true
   include-uid-range: [0-999999]
-  exclude-interface: ["tailscale0", "utun"]
 
-# DNS配置 - 防止DNS泄露，添加Volcano DNS作为fallback
+# DNS配置
 dns:
   enable: true
   ipv6: false
@@ -95,23 +92,11 @@ dns:
     - '*.lan'
     - 'localhost.ptlogin2.qq.com'
     - '+.stun.*'
-    - '+.stdpt.*'
     - '+.msftncsi.com'
-    - '+.srv.nintendo.net'
     - '+.ntp.org.cn'
     - '+.pool.ntp.org'
-    - '+.stun.*.microsoft.com'
-    - '+.turns.*.microsoft.com'
-    - '+.cmpassport.com'
-    - '+.*.cmpassport.com'
-    - '+.10010.com'
-    - '+.*.10010.com'
-    - '+.189.cn'
-    - '+.*.189.cn'
-    - '+.id6.me'
+    - '+.(cmpassport.com|10010.com|189.cn)'
     - 'dns.msftncsi.com'
-    - 'networktest.windowsupdate.com'
-    - 'www.msftncsi.com'
     - 'www.msftconnecttest.com'
 
   nameserver:
@@ -120,11 +105,10 @@ dns:
     - 114.114.114.114
 
   fallback:
-    - https://1.12.12.12/dns-query  # Volcano DNS
-    - tls://8.8.8.8:853
-    - tls://1.1.1.1:853
+    - https://1.12.12.12/dns-query
     - https://dns.google/dns-query
     - https://cloudflare-dns.com/dns-query
+    - tls://1.1.1.1:853
 
   fallback-filter:
     geoip: true
@@ -158,82 +142,15 @@ dns:
     - 114.114.114.114
 
   nameserver-policy:
-    'www.bilibili.com': [223.6.6.6]
-    'api.bilibili.com': [223.6.6.6]
-    '*.taobao.com': [223.6.6.6]
-    '*.tmall.com': [223.6.6.6]
-    '*.alipay.com': [223.6.6.6]
-    '*.alicdn.com': [223.6.6.6]
-    '*.aliyun.com': [223.6.6.6]
-    '*.jd.com': [223.6.6.6]
-    '*.qq.com': [119.29.29.29]
-    '*.tencent.com': [119.29.29.29]
-    '*.weixin.com': [119.29.29.29]
-    '*.wechat.com': [119.29.29.29]
-    '*.weiyun.com': [119.29.29.29]
-    '+.cn': [223.6.6.6]
+    '+.bilibili.com': 223.6.6.6
+    '+.(taobao.com|tmall.com|alipay.com|alicdn.com|aliyun.com)': 223.6.6.6
+    '+.(qq.com|tencent.com|weixin.com|wechat.com|weiyun.com)': 119.29.29.29
+    '+.cn': 223.6.6.6
 
   caching: true
-  cache-size: 15360
+  cache-size: 8192
 
-# 基础设置 - 移动网络优化
-log-level: silent
-mode: rule
-allow-lan: false
-unified-delay: true
-tcp-concurrent: true
-connection-multiplexing: true
-tcp-no-delay: true
-tcp-fast-open: true
-tcp-early-data: true
-buffer-pkts: true
-mixed-port: 7890
-sniff-pure-tls: true
-tunnel-max-concurrent: 16
-udp-relay-mode: native
-proxy-reject-drop: true
-disable-color: true
-disable-discovery: true
-geo-auto-update: true
-geo-auto-update-interval: 24
-tracing: false
-profile-memory: false
-external-controller: ""
-secret: ""
-experimental:
-  ignore-resolve-fail: true
-
-# 性能优化参数 - 额外性能提升
-dial-context-timeout: 5
-find-process: false
-find-process-mode: off
-memory-percentage: 15
-proxy-check-ip-version: false
-disable-fake-ip-v6: true
-inbound-tfo: true
-skip-cert-verify: true
-proxy-groups-config:
-  enabled: false
-  interval: 600
-dns-simultaneous: true
-quic:
-  enabled: true
-  low-latency: true
-  max-udp-relay-packet-size: 8192
-transport-timeout: 10
-tcp-keep-alive-period: 30
-tcp-concurrent-reuse: true
-interface-name: ""
-proxy-check-timeout: 5
-store-selected: true
-store-fake-ip: true
-ebpf:
-  redirect-to-tun:
-    - eth0
-    - en0
-  auto-redir: true
-
-# 协议设置 - 更高效传输参数
+# 协议设置
 max-udp-packet-size: 10240
 http:
   max-connections-per-host: 32
@@ -268,13 +185,9 @@ sniffer:
   sniffing: [tls, http]
   port-whitelist: [80, 443]
   skip-domain:
-    - 'Mijia Cloud'
-    - '*.iCloud.*'
-    - '*.10010.com'
-    - '*.189.cn'
-    - '*.cmpassport.com'
-    - '*.opencloud.wostore.cn'
     - '+.cn'
-  sniff-timeout: 1.0
+    - '+.(10010.com|189.cn|cmpassport.com|opencloud.wostore.cn)'
+  sniff-timeout: 0.5
   always-resolve-first: false
   forest-fire: true
+  parse-pure-ip: false
