--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -35,9 +35,7 @@ custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/
 custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`600,,60
 custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`600,,60
 custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`600,,60
-
-# 应用分组
-custom_proxy_group=🌍 海外服务`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
+custom_proxy_group=🌍 海外服务`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]🌍 其他
 custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=🇨🇳 国内服务`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
