--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -11,7 +11,7 @@ emoji=(?!🇨🇳)[🇦-🇿]{2},
 emoji=^(?!.*[🇦-🇿]{2}).*?(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States),🇺🇸
 emoji=^(?!.*[🇦-🇿]{2}).*?(香港|HK|Hong Kong),🇭🇰
 emoji=^(?!.*[🇦-🇿]{2}).*?(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
-emoji=^(?!.*[🇦-🇿]{2}).*?(新加坡|狮城|SG|Singapore),🇸🇬
+emoji=^(?!.*[🇦-🇿]{2}).*?(狮城|狮城|SG|Singapore),🇸🇬
 emoji=^(?!.*[🇦-🇿]{2}).*?(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
 emoji=^(?!.*[🇦-🇿]{2}).*?(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
 emoji=^(?!.*[🇦-🇿]{2}).*?(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
@@ -26,17 +26,17 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # 代理分组
-custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
+custom_proxy_group=🚀 全局代理`select`[]⚡ 低延迟`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
+custom_proxy_group=⚡ 低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
 custom_proxy_group=🇭🇰 香港`url-test`🇭🇰`https://www.gstatic.com/generate_204`600,,60
 custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼`https://www.gstatic.com/generate_204`600,,60
-custom_proxy_group=🇸🇬 新加坡`url-test`🇸🇬`https://www.gstatic.com/generate_204`600,,60
+custom_proxy_group=🇸🇬 狮城`url-test`🇸🇬`https://www.gstatic.com/generate_204`600,,60
 custom_proxy_group=🇯🇵 日本`url-test`🇯🇵`https://www.gstatic.com/generate_204`600,,60
 custom_proxy_group=🇺🇸 美国`url-test`🇺🇸`https://www.gstatic.com/generate_204`600,,60
 custom_proxy_group=🌍 其他`url-test`^(?!.*(🇨🇳|🇭🇰|🇹🇼|🇸🇬|🇯🇵|🇺🇸)).*`https://www.gstatic.com/generate_204`600,,60
-custom_proxy_group=🌍 海外服务`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]🌍 其他
-custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
+custom_proxy_group=🌍 海外服务`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 狮城`[]🇹🇼 台湾`[]🇯🇵 日本`[]🇺🇸 美国`[]🌍 其他
+custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 狮城
 custom_proxy_group=🇨🇳 国内服务`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
