--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -11,7 +11,7 @@ emoji=(?!🇨🇳)[🇦-🇿]{2},
 emoji=^(?!.*[🇦-🇿]{2}).*?(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States),🇺🇸
 emoji=^(?!.*[🇦-🇿]{2}).*?(香港|HK|Hong Kong),🇭🇰
 emoji=^(?!.*[🇦-🇿]{2}).*?(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
-emoji=^(?!.*[🇦-🇿]{2}).*?(狮城|狮城|SG|Singapore),🇸🇬
+emoji=^(?!.*[🇦-🇿]{2}).*?(新加坡|狮城|SG|Singapore),🇸🇬
 emoji=^(?!.*[🇦-🇿]{2}).*?(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
 emoji=^(?!.*[🇦-🇿]{2}).*?(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
 emoji=^(?!.*[🇦-🇿]{2}).*?(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
