--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -6,7 +6,7 @@ exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|^\d[\d.]*\s*[MG]B(?!
 
 # Emoji
 add_emoji=true
-remove_old_emoji=true
+remove_old_emoji=false
 emoji=美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States,🇺🇸
 emoji=香港|HK|Hong Kong,🇭🇰
 emoji=日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka,🇯🇵
