--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -91,8 +91,11 @@ dns:
   nameserver:
     - 223.6.6.6
     - https://dns.alidns.com/dns-query
+  proxy-server-nameserver:
+    - https://cloudflare-dns.com/dns-query
+    - https://dns.google/dns-query
   fallback:
-    - https://1.12.12.12/dns-query
+    - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
   fallback-filter:
     geoip: true
@@ -106,7 +109,7 @@ dns:
     '+.(taobao.com|tmall.com|alipay.com|alicdn.com|aliyun.com)': 223.6.6.6
     '+.(qq.com|tencent.com|weixin.com|wechat.com|weiyun.com)': 223.6.6.6
     '+.cn': 223.6.6.6
-    '+.(google.com|youtube.com|github.com|facebook.com|x.com|instagram.com|netflix.com|discord.com|reddit.com|tiktok.com)': https://1.12.12.12/dns-query
+    '+.(google.com|youtube.com|github.com|facebook.com|x.com|instagram.com|netflix.com|discord.com|reddit.com|tiktok.com)': 'https://cloudflare-dns.com/dns-query#proxy'
   caching: true
   cache-size: 4096
 
