--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -82,7 +82,7 @@ dns:
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter:
     - '*.lan'
-    - 'localhost.ptlogin2.qq.com'
+    - 'localhost'
     - '+.stun.*'
     - '+.msftncsi.com'
     - '+.ntp.org.cn'
@@ -95,6 +95,7 @@ dns:
     - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
   fallback:
+    - 223.6.6.6
     - https://cloudflare-dns.com/dns-query
     - https://dns.google/dns-query
   fallback-filter:
@@ -111,7 +112,8 @@ dns:
     '+.cn': 223.6.6.6
     '+.(google.com|youtube.com|github.com|facebook.com|x.com|instagram.com|netflix.com|discord.com|reddit.com|tiktok.com)': 'https://cloudflare-dns.com/dns-query#proxy'
   caching: true
-  cache-size: 4096
+  cache-size: 5000
+  cache-ttl: 3600
 
 # 协议设置
 max-udp-packet-size: 4096
