--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -29,7 +29,7 @@ custom_proxy_group=🚀 全局代理`select`[]⚡ 低延迟`[]🇭🇰 HK`[]🇸
 custom_proxy_group=🔍 手动选择`select`.*
 custom_proxy_group=⚡ 低延迟`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 HK`url-test`🇭🇰|香港`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`🇹🇼|台湾`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 TW`url-test`🇹🇼|台湾`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 SG`url-test`🇸🇬|新加坡`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`🇯🇵|日本`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 US`url-test`🇺🇸|美国`https://www.gstatic.com/generate_204`300,,50
